[metadata]
name = simple-youtube-video-finder
version = attr: video_finder.__version__
author = Christof Franke
description = easy to use interface for youtube api (only public video data). 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MrKrautee/simple-youtube-video-finder
project_urls =
    Bug Tracker = https://github.com/MrKrautee/simple-youtube-video-finder/issues
license = GPLv3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: MacOS
    Operating System :: Unix
    Operating System :: Windows

[options]
zip_safe = False
include_package_data = True
tests_require =
    pytest
packages = find:
python_requires = >=3.6

[flake8]
exclude=
    .git,
    migrations,
    fixtures,
    video_provider
max-complexity = 12